--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -14,9 +14,13 @@
 }
 
 // HEADER
+
+body{
+	background-color: $black;
+}
+
 #header{
 	height: 430px;
-	background-color: $black;
 	background: url('../images/head-background.jpg');
 	background-repeat: no-repeat;
 	background-position: top center;
@@ -73,6 +77,7 @@
 
 .newsletter{
 	padding-top: 20px;
+	background-color: $white;
 	// border-bottom:1px solid $grey;
 }
 
