--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import url(http://fonts.googleapis.com/css?family=Oxygen);
 /* normalize.css v2.1.1 | MIT License | git.io/normalize */
 /* ==========================================================================
    HTML5 display definitions
@@ -434,7 +435,7 @@ body {
   color: #222222;
   padding: 0;
   margin: 0;
-  font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+  font-family: "Oxygen", Helvetica, Arial, sans-serif;
   font-weight: normal;
   font-style: normal;
   line-height: 1;
@@ -2038,7 +2039,7 @@ p aside {
 /* Default header styles */
 /* line 181, ../../../../../../Library/Ruby/Gems/1.8/gems/zurb-foundation-4.3.1/scss/foundation/components/_type.scss */
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+  font-family: "Oxygen", Helvetica, Arial, sans-serif;
   font-weight: bold;
   font-style: normal;
   color: #222222;
@@ -7233,36 +7234,40 @@ a.th {
   text-align: left;
 }
 
-/* line 17, ../sass/_main.scss */
+/* line 18, ../sass/_main.scss */
+body {
+  background-color: #050c10;
+}
+
+/* line 22, ../sass/_main.scss */
 #header {
   height: 430px;
-  background-color: #050c10;
   background: url("../images/head-background.jpg");
   background-repeat: no-repeat;
   background-position: top center;
 }
 
-/* line 24, ../sass/_main.scss */
+/* line 28, ../sass/_main.scss */
 .social-nav {
   margin-top: 10px;
   margin-right: 10px;
 }
-/* line 28, ../sass/_main.scss */
+/* line 32, ../sass/_main.scss */
 .social-nav img {
   background-repeat: no-repeat;
   margin-right: 5px;
 }
 
-/* line 34, ../sass/_main.scss */
+/* line 38, ../sass/_main.scss */
 .logo {
   margin-top: 10px;
 }
 
-/* line 38, ../sass/_main.scss */
+/* line 42, ../sass/_main.scss */
 .eslogan {
   margin-top: 45px;
 }
-/* line 40, ../sass/_main.scss */
+/* line 44, ../sass/_main.scss */
 .eslogan a {
   padding-top: 20px;
   border-style: solid;
@@ -7295,11 +7300,11 @@ a.th {
   color: #333333;
 }
 
-/* line 47, ../sass/_main.scss */
+/* line 51, ../sass/_main.scss */
 .eslogan-foot {
   margin: 40px 0px;
 }
-/* line 49, ../sass/_main.scss */
+/* line 53, ../sass/_main.scss */
 .eslogan-foot a {
   padding-top: 20px;
   border-style: solid;
@@ -7333,18 +7338,18 @@ a.th {
 .eslogan-foot a:hover, .eslogan-foot a:focus {
   color: #333333;
 }
-/* line 56, ../sass/_main.scss */
+/* line 60, ../sass/_main.scss */
 .eslogan-foot a:hover {
   background-color: #dedede;
   border: 1 px solid #f0eff0;
 }
 
-/* line 62, ../sass/_main.scss */
+/* line 66, ../sass/_main.scss */
 .launching {
   margin-top: 30px;
   padding: 10px 0px;
 }
-/* line 65, ../sass/_main.scss */
+/* line 69, ../sass/_main.scss */
 .launching h3 {
   color: #050c10;
   font-size: 1em;
@@ -7353,17 +7358,18 @@ a.th {
   opacity: 0.6;
 }
 
-/* line 74, ../sass/_main.scss */
+/* line 78, ../sass/_main.scss */
 .newsletter {
   padding-top: 20px;
+  background-color: white;
 }
 
-/* line 79, ../sass/_main.scss */
+/* line 84, ../sass/_main.scss */
 .main {
   padding: 20px 0px;
   background-color: #f0eff0;
 }
-/* line 82, ../sass/_main.scss */
+/* line 87, ../sass/_main.scss */
 .main h2 {
   margin: 25px 0px 45px 0px;
   font-size: 1.2em;
@@ -7372,17 +7378,17 @@ a.th {
   color: #4d4d4d;
 }
 
-/* line 91, ../sass/_main.scss */
+/* line 96, ../sass/_main.scss */
 .carrusel {
   text-align: center;
   margin-bottom: 50px;
 }
-/* line 94, ../sass/_main.scss */
+/* line 99, ../sass/_main.scss */
 .carrusel .orbit-container {
   background-color: #f0eff0;
 }
 
-/* line 99, ../sass/_main.scss */
+/* line 104, ../sass/_main.scss */
 .footer {
   margin-bottom: 20px;
   padding-top: 40px;
@@ -7390,7 +7396,7 @@ a.th {
   background-color: white;
 }
 
-/* line 106, ../sass/_main.scss */
+/* line 111, ../sass/_main.scss */
 .copy {
   height: 40px;
   padding-top: 20px;
@@ -7398,58 +7404,58 @@ a.th {
   color: #4d4d4d;
 }
 
-/* line 116, ../sass/_main.scss */
+/* line 121, ../sass/_main.scss */
 .twitter {
   background: url("../images/icons/twitter.png");
 }
 
-/* line 120, ../sass/_main.scss */
+/* line 125, ../sass/_main.scss */
 .twitter:hover {
   background: url("../images/icons/twitter-over.png");
 }
 
-/* line 124, ../sass/_main.scss */
+/* line 129, ../sass/_main.scss */
 .facebook {
   background: url("../images/icons/facebook.png");
 }
 
-/* line 128, ../sass/_main.scss */
+/* line 133, ../sass/_main.scss */
 .facebook:hover {
   background: url("../images/icons/facebook-over.png");
 }
 
-/* line 132, ../sass/_main.scss */
+/* line 137, ../sass/_main.scss */
 .logo {
   background: url("../images/logo-white.png");
 }
 
-/* line 136, ../sass/_main.scss */
+/* line 141, ../sass/_main.scss */
 .logo:hover {
   background: url("../images/logo.png");
 }
 
-/* line 141, ../sass/_main.scss */
+/* line 146, ../sass/_main.scss */
 .twitter-foot {
   background: url("../images/icons/twitter-grey.png");
 }
 
-/* line 145, ../sass/_main.scss */
+/* line 150, ../sass/_main.scss */
 .twitter-foot:hover {
   background: url("../images/icons/twitter-grey-over.png");
 }
 
-/* line 149, ../sass/_main.scss */
+/* line 154, ../sass/_main.scss */
 .facebook-foot {
   background: url("../images/icons/facebook-grey.png");
   margin-right: 5px;
 }
 
-/* line 154, ../sass/_main.scss */
+/* line 159, ../sass/_main.scss */
 .facebook-foot:hover {
   background: url("../images/icons/facebook-grey-over.png");
 }
 
-/* line 158, ../sass/_main.scss */
+/* line 163, ../sass/_main.scss */
 .logo-foot {
   background: url("../images/logo.png");
 }
