--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -13,6 +13,16 @@
 	text-align: left;
 }
 
+// Global Styles
+
+h3{
+	color: $white;
+	font-size: 1.4em;
+	letter-spacing: 0.1em;
+	margin: 30px 0px 20px 0px;
+	padding: 0;
+}
+
 // HEADER
 
 body{
@@ -20,7 +30,7 @@ body{
 }
 
 #header{
-	height: 430px;
+	// height: 450px;
 	background: url('../images/head-background.jpg');
 	background-repeat: no-repeat;
 	background-position: top center;
@@ -40,9 +50,8 @@ body{
 }
 
 .eslogan{
-		margin-top: 45px;
+		margin-top: 15px;
 	a{
-		padding-top: 20px;
 		@include button;
 		color: $black;
 	}
@@ -64,8 +73,8 @@ body{
 }
 
 .launching{
-	margin-top: 30px;
-	padding: 10px 0px;
+	padding: 0;
+
 	h3{
 		color: $black;
 		font-size: 1em;
@@ -76,17 +85,17 @@ body{
 }
 
 .newsletter{
-	padding-top: 20px;
+	padding-top: 25px;
 	background-color: $white;
 	// border-bottom:1px solid $grey;
 }
 
 .main{
-	padding: 20px 0px;
+	padding: 35px 0px 25px 0px;
 	background-color: $light-grey;
 	h2{
-		margin: 25px 0px 45px 0px;
-		font-size: 1.2em;
+		margin: 20px 0px;
+		font-size: 1.1em;
 		padding: 0px 30px;
 		text-align: center;
 		color: $dark-grey;
@@ -97,6 +106,7 @@ body{
 	text-align: center;
 	margin-bottom: 50px;
 	.orbit-container{
+		margin-top: 25px;
 		background-color: $light-grey;
 	}
 }
