--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -24,10 +24,33 @@ h3{
 }
 
 h4{
-	color: $dark-grey;
+	color: $white;
 	font-size: 1.2em;
 	letter-spacing: 0.1em;
 	margin: 35px 0px 0px 0px; 
+}
+
+.content-area{
+	margin-top: 20px;
+}
+
+.btn-area{
+	background-color: $light-blue;
+	letter-spacing: 0.05em;
+	padding: 9px 15px;
+	color: #333;
+	-moz-border-radius: 3px;
+	-webkit-border-radius: 3px;
+	border-radius: 3px;
+	margin-right: 15px;
+	-moz-box-shadow: 1px 3px 12px #000000;
+	-webkit-box-shadow: 1px 3px 12px #000000;
+	box-shadow: 1px 3px 14px #000000;
+}
+
+.btn-area:hover{
+	background-color: $light-grey;
+	color: #111;
 }
 
 // HEADER
@@ -92,7 +115,7 @@ body{
 
 .social-nav{
 	margin-top: 10px;
-	margin-right: 10px;
+	margin-right: 15px;
 
 	img{
 		background-repeat:no-repeat;
