Contact web bilanguage

--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -240,6 +240,19 @@ body{
 	}
 }
 
+.panel{
+	padding-top: 30px;
+	padding-left: 25px;
+}
+
+.panel p{
+	font-size: 0.8em;
+}
+.panel h6{
+	font-size: 0.9em;
+	margin-top: 10px;
+}
+
 // Botones
 
 //head
